seamless/tests/api_error_compile_tests/11_enum_empty.stderr
error: ApiError: Enums without variants are not supported
 --> $DIR/11_enum_empty.rs:3:6
  |
3 | enum Foo { }
  |      ^^^
