seamless/tests/api_error_compile_tests/11_enum_empty.rs
#[derive(seamless::ApiError)]
#[api_error(internal)]
enum Foo { }

fn main () {}